Corrige crud agregando vinculacion con entidades asociadas